2001-02-25  Andy Hertzfeld  <andy@eazel.com>

	finished first pass at underlying annotation infrastructure:
		async md5 checksum calculation
		saving the checksum in the metadata
		batching multiple lookups into a single request
		posting the request to the server and parsing the response
		caching annotations locally, saving count in metadata
	
	* libnautilus-extensions/nautilus-annotation.c:
	(digest_file_completed), (digest_file_failed),
	(read_file_open_callback), (calculate_file_digest),
	(get_file_from_digest), (get_annotation_path),
	(has_local_annotation), (add_annotations_to_file), (remember_file),
	(forget_file), (got_annotations_callback),
	(fetch_annotations_from_server), (get_annotation_from_server),
	(got_file_digest), (nautilus_annotation_get_annotation):
	* libnautilus-extensions/nautilus-metadata.h:

2001-02-22  Andy Hertzfeld  <andy@eazel.com>

	post-1_0_6 branch with annotation stuff
	
	* Makefile.am:
	* applets/Makefile.am:
	* components/Makefile.am:
	* components/rss-control/.cvsignore:
	* components/rss-control/Makefile.am:
	* components/rss-control/main.c: (rss_control_object_destroyed),
	(rss_control_make_object), (main):
	* components/rss-control/nautilus-rss-control.c:
	(nautilus_rss_control_initialize_class), (get_bonobo_properties),
	(set_bonobo_properties), (nautilus_rss_control_initialize),
	(free_rss_data_item), (nautilus_rss_control_clear_items),
	(nautilus_rss_control_destroy), (nautilus_rss_control_get_control),
	(nautilus_rss_control_set_title), (rss_logo_callback),
	(rss_read_done_callback), (load_rss_file),
	(nautilus_rss_control_set_uri), (rss_control_pixbuf_composite),
	(draw_rss_logo_image), (draw_rss_title), (draw_blue_line),
	(draw_rss_items), (nautilus_rss_control_draw),
	(nautilus_rss_control_expose),
	(nautilus_rss_control_set_prelight_index),
	(nautilus_rss_control_motion_event),
	(nautilus_rss_control_leave_event),
	(nautilus_rss_control_size_request),
	(nautilus_rss_control_button_press_event):